--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1671,7 +1671,7 @@ section,
 .stats .stats-item span:after {
   content: "";
   position: absolute;
-  display: block;
+  display: none;
   width: 25px;
   height: 3px;
   background: var(--accent-color);
@@ -1687,6 +1687,34 @@ section,
   margin: 0;
   font-family: var(--heading-font);
   font-weight: 500;
+}
+.inline-counter {
+  display: inline-flex;
+  align-items: baseline;
+  justify-content: center;
+  font-size: 48px;
+  font-weight: 700;
+  color: var(--heading-color);
+  position: relative;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+}
+
+.inline-counter::after {
+  /* content: "";
+  position: absolute; */
+  display: block;
+  /* width: 25px;
+  height: 3px;
+  background: var(--accent-color);
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto; */
+}
+
+.inline-counter .suffix {
+  margin-left: 4px;
 }
 
 /*--------------------------------------------------------------
@@ -2325,6 +2353,10 @@ section,
 /*--------------------------------------------------------------
 # Starter Section Section
 --------------------------------------------------------------*/
-.starter-section {
+/* .starter-section {
   /* Add your styles here */
+/* } */ */
+
+.purecounter::after {
+  content: " %";
 }
